<resources>
    <string name="app_name">TODOv5</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_hint">Wpisz nazwę zadania</string>
    <string name="name_label">Nazwa</string>
    <string name="details_label">Szczegóły</string>
    <string name="date_label">Data</string>
    <string name="done_label">Wykonane</string>
    <string name="task_add_new">Nowe zadanie</string>
    <string name="show_subtitle">Pokaż podtytuł</string>
    <string name="hide_subtitle">Ukryj podtytuł</string>
    <string name="subtitle_format">%1$d zadań</string>
    <string name="category">Kategoria</string>

</resources>