<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textColor="@color/primaryDark"/>

    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name_hint"
        style="@style/textFieldStyle"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/details_label" />

    <Spinner
        android:id="@+id/task_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/category"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/task_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:clickable="false"
        android:cursorVisible="false"
        android:focusableInTouchMode="false"
        android:hint="@string/app_name"
        android:inputType="date"
        android:minHeight="48dp"
        style="@style/textFieldStyle"/>

    <CheckBox
        android:id="@+id/task_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done_label" />

</LinearLayout>